Fix navigation menu looking weired on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ header {
 
 .menu-brand-wrapper>a{
     content: "";
-    width: 20%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -161,7 +161,7 @@ header {
 
 .menu-brand-wrapper>a i{
     border-radius:5px;
-    padding: 10% 20%;
+    padding: 3px 14px;
     border: 1px solid #fff;
 }
 
@@ -171,6 +171,7 @@ header {
 
 .logo-box {
     display: flex;
+    width:60%;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
